--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,9 @@
 *~
 *.swp
 *.swn
-*.xml
 .cabal-sandbox/
 cabal.sandbox.config
 dist/
 codex.tags
 *.swo
-*.aes
-*.db
-*.db-journal
-*.keter
-*.env
+TAGS
