--- a/http-client-auth.cabal
+++ b/http-client-auth.cabal
@@ -3,7 +3,8 @@ version:             0.1.1.0
 synopsis:            HTTP Basic and Digest Authentication for http-client.
 description:
 
-    HTTP Basic and Digest Authentication for http-client and http-conduit.
+    HTTP Basic and Digest Authentication for http-client and
+    http-conduit.
 
     * Multiple challenges aren't implemented.
     * Authentication-Info header isn't either.
@@ -18,18 +19,18 @@ build-type:          Simple
 cabal-version:       >=1.8
 
 library
-  exposed-modules:     Network.HTTP.Client.Auth
-  hs-source-dirs:      src
-  build-depends:       base             == 4.*
-                     , base64-string    == 0.2.*
-                     , blaze-builder    == 0.3.*
-                     , bytestring       == 0.10.*
-                     , case-insensitive == 1.2.*
-                     , conduit          >= 1.0
-                     , crypto-conduit   == 0.5.*
-                     , http-conduit     == 2.*
-                     , mtl              == 2.*
-                     , pureMD5          == 2.1.*
-                     , resourcet        == 1.1.*
-                     , transformers     == 0.3.*
-                     , utf8-string      == 0.3.*
+  exposed-modules:   Network.HTTP.Client.Auth
+  hs-source-dirs:    src
+  build-depends:     base             >= 4.0     && < 5.0
+                   , base64-string    >= 0.2     && < 3.0
+                   , blaze-builder    >= 0.3     && < 0.4
+                   , bytestring       >= 0.10    && < 1.0
+                   , case-insensitive >= 1.2     && < 2.0
+                   , conduit          >= 1.0     && < 1.3
+                   , crypto-conduit   >= 0.5     && < 1.0
+                   , http-conduit     >= 2.0     && < 2.3
+                   , mtl              >= 2.0.1   && < 2.3
+                   , pureMD5          >= 2.1     && < 2.3
+                   , resourcet        >= 1.1     && < 2.0
+                   , transformers     >= 0.4.1.0 && < 0.5
+                   , utf8-string      >= 0.3     && < 0.6
