--- a/http-client-auth.cabal
+++ b/http-client-auth.cabal
@@ -22,7 +22,7 @@ author:              Miguel Mitrofanov <miguelimo38@yandex.ru>,
 maintainer:          creichert07@gmail.com
 category:            Network
 build-type:          Simple
-cabal-version:       >=1.8
+cabal-version:       >=1.12
 
 library
   exposed-modules:   Network.HTTP.Client.Auth
@@ -46,8 +46,8 @@ library
 -- documenation accuracy testing
 test-suite doctest
   default-language: Haskell2010
-  ghc-options:      -Wall -Werror -threaded
-  hs-source-dirs:   tests
+  ghc-options:      -Wall -threaded
+  hs-source-dirs:   test
   main-is:          DocTest.hs
   type:             exitcode-stdio-1.0
   build-depends:    base
@@ -59,8 +59,8 @@ test-suite doctest
 -- documentation coverage
 test-suite haddock
   main-is:          Haddock.hs
-  hs-source-dirs:   tests
-  ghc-options:      -Wall -Werror -threaded
+  hs-source-dirs:   test
+  ghc-options:      -Wall -threaded
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
   build-depends:    base
@@ -71,8 +71,8 @@ test-suite haddock
 -- static analysis
 test-suite hlint
     main-is:          HLint.hs
-    ghc-options:      -Wall -Werror -threaded
-    hs-source-dirs:   tests
+    ghc-options:      -Wall -threaded
+    hs-source-dirs:   test
     type:             exitcode-stdio-1.0
     default-language: Haskell2010
     build-depends:    base
