--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: haskell
 ghc:
-  - 7.8
+  #- 7.8
   - 7.6
-  - 7.4
+  #- 7.4
+
+before_install:
+  - sudo apt-get update
+  - sudo apt-get install haddock doctest
