--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,17 @@ ghc:
   #- 7.4
 
 before_install:
-  - sudo apt-get update
-  - sudo apt-get install haddock doctest
+  - cabal update
+  - cabal install happy alex
+  - export PATH=$HOME/.cabal/bin:$PATH
+
+install:
+    - cabal sandbox init
+    - cabal install --only-dependencies --enable-tests
+
+before_script:
+    - cabal configure --enable-tests
+    - cabal build
+
+script:
+    - cabal test --show-details=always --test-options="--color"
