--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,34 @@
 language: haskell
-ghc:
-  #- 7.8
-  - 7.6
-  #- 7.4
+before_install:
+env:
+ - GHCVER=7.4.2 CABALVER=1.18
+ - GHCVER=7.6.3 CABALVER=1.18
+ - GHCVER=7.8.4 CABALVER=1.18
+ - GHCVER=7.10.1 CABALVER=1.22
+ - GHCVER=head  CABALVER=head
+
+matrix:
+  allow_failures:
+   - env: GHCVER=7.10.1 CABALVER=1.22
+   - env: GHCVER=head  CABALVER=head
 
 before_install:
-  - cabal update
-  - cabal install happy alex
-  - export PATH=$HOME/.cabal/bin:$PATH
+ - travis_retry sudo add-apt-repository -y ppa:hvr/ghc
+ - travis_retry sudo apt-get update
+ - travis_retry sudo apt-get install cabal-install-$CABALVER ghc-$GHCVER
+ - export PATH=/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$HOME/.cabal/bin:$PATH
+ - cabal --version
 
 install:
-    - cabal sandbox init
-    - cabal install --only-dependencies --enable-tests
-
-before_script:
-    - cabal configure --enable-tests
-    - cabal build
+ - travis_retry cabal update
+ - cabal install --only-dependencies --enable-tests
 
 script:
-    - cabal test --show-details=always --test-options="--color"
+ - cabal configure --enable-tests 
+#--enable-library-coverage || cabal configure --enable-tests --enable-coverage
+ - cabal build
+ - cabal test
+
+#after_script:
+# - cabal install hpc-coveralls
+# - hpc-coveralls --exclude-dir=test test 
