--- a/http-client-auth.cabal
+++ b/http-client-auth.cabal
@@ -27,19 +27,19 @@ cabal-version:       >=1.12
 library
   exposed-modules:   Network.HTTP.Client.Auth
   hs-source-dirs:    src
-  build-depends:     base             >= 4.0   && < 5.0
-                   , base64-string    >= 0.2   && < 3.0
-                   , blaze-builder    >= 0.3   && < 0.4
-                   , bytestring       >= 0.10  && < 1.0
-                   , case-insensitive >= 1.2   && < 2.0
-                   , conduit          >= 1.0   && < 1.3
-                   , crypto-conduit   >= 0.5   && < 1.0
-                   , http-conduit     >= 2.0   && < 2.3
-                   , mtl              >= 2.0.1 && < 2.3
-                   , pureMD5          >= 2.1   && < 2.3
-                   , resourcet        >= 1.1   && < 2.0
+  build-depends:     base             >= 4.0
+                   , base64-string    >= 0.2
+                   , blaze-builder    >= 0.3
+                   , bytestring       >= 0.10
+                   , case-insensitive >= 1.2
+                   , conduit          >= 1.0
+                   , crypto-conduit   >= 0.5
+                   , http-conduit     >= 2.0
+                   , mtl              >= 2.0.1
+                   , pureMD5          >= 2.1
+                   , resourcet        >= 1.1
                    , transformers     >= 0.2
-                   , utf8-string      >= 0.3   && < 0.6
+                   , utf8-string      >= 0.3
 
 
 
