--- a/.travis.yml
+++ b/.travis.yml
@@ -18,17 +18,18 @@ before_install:
  - travis_retry sudo apt-get install cabal-install-$CABALVER ghc-$GHCVER
  - export PATH=/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$HOME/.cabal/bin:$PATH
  - cabal --version
+ - cabal install happy alex
 
 install:
  - travis_retry cabal update
  - cabal install --only-dependencies --enable-tests
 
 script:
- - cabal configure --enable-tests 
+ - cabal configure --enable-tests
 #--enable-library-coverage || cabal configure --enable-tests --enable-coverage
  - cabal build
  - cabal test
 
 #after_script:
 # - cabal install hpc-coveralls
-# - hpc-coveralls --exclude-dir=test test 
+# - hpc-coveralls --exclude-dir=test test
